[gd_scene load_steps=6 format=3 uid="uid://c3vn22djowm17"]

[ext_resource type="PackedScene" uid="uid://ctknb0lymanwg" path="res://2d/source/scenes/builder/status_bar.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://dwsjq4q12xh8r" path="res://2d/source/scenes/builder/next_event.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bqp0rlaj5w25g" path="res://2d/source/scenes/builder/menu.tscn" id="3"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/events/inventory.gd" id="4"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="6"]

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource("4")

[node name="HeaderMenu" parent="." instance=ExtResource("3")]

[node name="Container" type="ScrollContainer" parent="."]
clip_contents = false
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 448.0
mouse_filter = 2
theme = ExtResource("6")

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
columns = 2

[node name="MarginLabelDontRemove" type="Label" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2

[node name="MarginDescription" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="EventNumber" type="Label" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "Event number."
horizontal_alignment = 2

[node name="Grid8" type="HBoxContainer" parent="Container/Grid"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="EventSpinbox" type="SpinBox" parent="Container/Grid/Grid8"]
layout_mode = 2
min_value = 1.0
max_value = 801.0
page = 1.0
value = 1.0

[node name="LabelDescription4" type="Label" parent="Container/Grid/Grid8"]
layout_mode = 2
mouse_filter = 1
text = "  Changing the value here will change everything below this option."

[node name="LabelEventEnabled" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Event Enabled."
horizontal_alignment = 2

[node name="Grid10" type="HBoxContainer" parent="Container/Grid"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="EventEnabled" type="CheckButton" parent="Container/Grid/Grid10"]
layout_mode = 2

[node name="LabelDescription3" type="Label" parent="Container/Grid/Grid10"]
layout_mode = 2
mouse_filter = 1
text = "  Is this event enabled for this level?"

[node name="ItemListTitleAdd" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1
text = "Inventory dictionaries."
horizontal_alignment = 2

[node name="Grid4" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="ItemListSelectDictionary" type="ItemList" parent="Container/Grid/Grid4"]
custom_minimum_size = Vector2(500, 111)
layout_mode = 2
allow_reselect = true
item_count = 9
item_0/text = "amulet"
item_1/text = "armor"
item_2/text = "book"
item_3/text = "food"
item_4/text = "gold"
item_5/text = "ring"
item_6/text = "scroll"
item_7/text = "wand"
item_8/text = "weapon"

[node name="ItemListBody" type="Label" parent="Container/Grid/Grid4"]
layout_mode = 2
text = "  Select one json 
  dictionary"

[node name="ItemListTitleEmpty3" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1

[node name="Grid3" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="Padding" type="Label" parent="Container/Grid/Grid3"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/Grid/Grid3"]
layout_mode = 2
text = "Add"

[node name="ItemListTitleRemove" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1
text = "This Inventory list will be given to player when this event is finished."
horizontal_alignment = 2
autowrap_mode = 2

[node name="Grid6" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="ItemListAddTheseToInventory" type="ItemList" parent="Container/Grid/Grid6"]
custom_minimum_size = Vector2(500, 111)
layout_mode = 2
select_mode = 1
allow_reselect = true
max_columns = 2
fixed_icon_size = Vector2i(32, 32)

[node name="ItemListBody" type="Label" parent="Container/Grid/Grid6"]
layout_mode = 2
text = "  More than one
  inventory item can
  be given to player."

[node name="ItemListTitle4" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1

[node name="Grid7" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="Padding" type="Label" parent="Container/Grid/Grid7"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/Grid/Grid7"]
layout_mode = 2
text = "Remove"

[node name="LabelAmount" type="Label" parent="Container/Grid"]
layout_mode = 2
size_flags_horizontal = 3
focus_previous = NodePath("../../../ToTitle")
text = "Item stack amount."
horizontal_alignment = 2
autowrap_mode = 2

[node name="Grid9" type="HBoxContainer" parent="Container/Grid"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
alignment = 2

[node name="SpinboxAmount" type="SpinBox" parent="Container/Grid/Grid9"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 999.0
page = 1.0
value = 1.0

[node name="LabelDescription5" type="Label" parent="Container/Grid/Grid9"]
layout_mode = 2
mouse_filter = 1
text = "  The amount given to each item in the above inventory list. If you
  selected an apple and an orange to be added to the above list and this
  amount was set to 5 then you would have 5 apples and 5 oranges."

[node name="EmptyLabel" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="EmptyDescription" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="StatusBar" parent="." instance=ExtResource("1")]

[node name="NextEvent" parent="." instance=ExtResource("2")]

[connection signal="tree_exiting" from="." to="." method="_on_Node2D_tree_exiting"]
[connection signal="value_changed" from="Container/Grid/Grid8/EventSpinbox" to="." method="_on_event_number_Spinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid10/EventEnabled" to="." method="_on_event_Enabled_toggled"]
[connection signal="item_selected" from="Container/Grid/Grid4/ItemListSelectDictionary" to="." method="_on_dictionary_ItemList_item_selected"]
[connection signal="pressed" from="Container/Grid/Grid3/Button" to="." method="_on_prize_item_list_add_Button_pressed"]
[connection signal="pressed" from="Container/Grid/Grid7/Button" to="." method="_on_prize_item_list_remove_Button_pressed"]
[connection signal="value_changed" from="Container/Grid/Grid9/SpinboxAmount" to="." method="_on_amount_Spinbox_value_changed"]
[connection signal="tree_exiting" from="StatusBar" to="." method="_on_StatusBar_tree_exiting"]
